name:               ElixirFM
version:            1.2.1
license:            GPL
license-file:       LICENSE
extra-source-files: INSTALL, Setup.PL, elixir.svg
copyright:          2014
author:             Otakar Smrz
maintainer:         otakar-smrz users.sf.net
homepage:           http://otakar-smrz.users.sf.net/
package-url:        http://sourceforge.net/projects/elixir-fm/
category:           Text, Natural Language Processing
build-depends:      Encode, Cabal, base < 5.0, containers, wl-pprint > 1.0
build-type:         Simple
synopsis:           Functional Arabic Morphology
description:        The "ElixirFM" library implements a computational model of the morphological
                    processes in Arabic. Both the library and the model have been designed by
                    Otakar Smr&#382; and are described in his PhD thesis
                    /Functional Arabic Morphology. Formal System and Implementation/,
                    Charles University in Prague, July 2007,
                    <http://elixir-fm.sourceforge.net/elixir-thesis.pdf>.
                    The complete project is hosted on <http://sourceforge.net/projects/elixir-fm/>
                    and an online interface is available via <http://elixir-fm.sourceforge.net/>.
                    .
                    /ElixirFM/ is inspired by and can directly extend the /Functional Morphology/
                    library developed by Markus Forsberg in his licenciate thesis
                    /Applications of Functional Programming in Processing Formal and Natural Languages/,
                    G&#246;teborg University and Chalmers University of Technology,
                    December 2004, <http://www.cse.chalmers.se/alumni/markus/FM/>.
                    .
                    "ElixirFM"
exposed-modules:    ElixirFM,
                    --  Elixir,
                        Elixir.Data,
                            Elixir.Data.Extra,
                            Elixir.Data.Moony,
                                Elixir.Data.Moony.Complex,
                                Elixir.Data.Moony.Foreign,
                                Elixir.Data.Moony.Regular,
                            Elixir.Data.Sunny,
                                Elixir.Data.Sunny.Complex,
                                Elixir.Data.Sunny.Foreign,
                                Elixir.Data.Sunny.Regular,
                        Elixir.Compose,
                        Elixir.Derive,
                        Elixir.Entity,
                        Elixir.Inflect,
                        Elixir.Lexicon,
                        Elixir.Lookup,
                        Elixir.Patterns,
                            Elixir.Patterns.Literal,
                            Elixir.Patterns.Triliteral,
                            Elixir.Patterns.Quadriliteral,
                        Elixir.Pretty,
                        Elixir.Resolve,
                        Elixir.System,
                        Elixir.Template,
                        Elixir.Version,
                    --  FM,
                        --  FM.Generic,
                            FM.Generic.General
other-modules:                      Elixir.Data.Moony.Complex.A,
                                    Elixir.Data.Moony.Complex.B,
                                    Elixir.Data.Moony.Complex.C,
                                    Elixir.Data.Moony.Complex.D,
                                    Elixir.Data.Moony.Complex.E,
                                    Elixir.Data.Moony.Complex.F,
                                    Elixir.Data.Moony.Complex.G,
                                    Elixir.Data.Moony.Complex.H,
                                    Elixir.Data.Moony.Complex.I,
                                    Elixir.Data.Moony.Complex.J,
                                    Elixir.Data.Moony.Complex.K,
                                    Elixir.Data.Moony.Complex.L,
                                    Elixir.Data.Moony.Complex.M,
                                    Elixir.Data.Moony.Complex.N,
                                    Elixir.Data.Moony.Complex.O,
                                    Elixir.Data.Moony.Complex.P,
                                    Elixir.Data.Moony.Complex.Q,
                                    Elixir.Data.Moony.Foreign.A,
                                    Elixir.Data.Moony.Foreign.B,
                                    Elixir.Data.Moony.Foreign.C,
                                    Elixir.Data.Moony.Foreign.D,
                                    Elixir.Data.Moony.Foreign.E,
                                    Elixir.Data.Moony.Foreign.F,
                                    Elixir.Data.Moony.Foreign.G,
                                    Elixir.Data.Moony.Foreign.H,
                                    Elixir.Data.Moony.Foreign.I,
                                    Elixir.Data.Moony.Foreign.J,
                                    Elixir.Data.Moony.Foreign.K,
                                    Elixir.Data.Moony.Foreign.L,
                                    Elixir.Data.Moony.Foreign.M,
                                    Elixir.Data.Moony.Foreign.N,
                                    Elixir.Data.Moony.Foreign.O,
                                    Elixir.Data.Moony.Regular.A,
                                    Elixir.Data.Moony.Regular.B,
                                    Elixir.Data.Moony.Regular.C,
                                    Elixir.Data.Moony.Regular.D,
                                    Elixir.Data.Moony.Regular.E,
                                    Elixir.Data.Moony.Regular.F,
                                    Elixir.Data.Moony.Regular.G,
                                    Elixir.Data.Moony.Regular.H,
                                    Elixir.Data.Moony.Regular.I,
                                    Elixir.Data.Moony.Regular.J,
                                    Elixir.Data.Moony.Regular.K,
                                    Elixir.Data.Moony.Regular.L,
                                    Elixir.Data.Moony.Regular.M,
                                    Elixir.Data.Moony.Regular.N,
                                    Elixir.Data.Moony.Regular.O,
                                    Elixir.Data.Moony.Regular.P,
                                    Elixir.Data.Moony.Regular.Q,
                                    Elixir.Data.Moony.Regular.R,
                                    Elixir.Data.Moony.Regular.S,
                                    Elixir.Data.Moony.Regular.T,
                                    Elixir.Data.Moony.Regular.U,
                                    Elixir.Data.Moony.Regular.V,
                                    Elixir.Data.Moony.Regular.W,
                                    Elixir.Data.Sunny.Complex.A,
                                    Elixir.Data.Sunny.Complex.B,
                                    Elixir.Data.Sunny.Complex.C,
                                    Elixir.Data.Sunny.Complex.D,
                                    Elixir.Data.Sunny.Complex.E,
                                    Elixir.Data.Sunny.Complex.F,
                                    Elixir.Data.Sunny.Complex.G,
                                    Elixir.Data.Sunny.Complex.H,
                                    Elixir.Data.Sunny.Foreign.A,
                                    Elixir.Data.Sunny.Foreign.B,
                                    Elixir.Data.Sunny.Foreign.C,
                                    Elixir.Data.Sunny.Foreign.D,
                                    Elixir.Data.Sunny.Foreign.E,
                                    Elixir.Data.Sunny.Foreign.F,
                                    Elixir.Data.Sunny.Regular.A,
                                    Elixir.Data.Sunny.Regular.B,
                                    Elixir.Data.Sunny.Regular.C,
                                    Elixir.Data.Sunny.Regular.D,
                                    Elixir.Data.Sunny.Regular.E,
                                    Elixir.Data.Sunny.Regular.F,
                                    Elixir.Data.Sunny.Regular.G,
                                    Elixir.Data.Sunny.Regular.H,
                                    Elixir.Data.Sunny.Regular.I,
                                    Elixir.Data.Sunny.Regular.J,
                                    Elixir.Data.Sunny.Regular.K,
                                    Elixir.Data.Sunny.Regular.L,
                                    Elixir.Data.Sunny.Regular.M,
                                    Elixir.Data.Sunny.Regular.N,
                                    Elixir.Data.Sunny.Regular.O,
                                    Elixir.Data.Sunny.Regular.P,
                                    Elixir.Data.Sunny.Regular.Q,
                                    Elixir.Data.Sunny.Regular.R
extensions:         MultiParamTypeClasses,
                    FunctionalDependencies,
                    ExistentialQuantification,
                    --  PolymorphicComponents,
                    RankNTypes,
                    --  ScopedTypeVariables,
                    OverlappingInstances,
                    --  IncoherentInstances,
                    UndecidableInstances,
                    TypeSynonymInstances,
                    FlexibleInstances,
                    FlexibleContexts
hugs-options:       -98 +o +u -h96M
ghc-options:        +RTS -c -RTS

executable:         elixir
main-is:            Main.hs
other-modules:      ElixirFM,
                    --  Elixir,
                        Elixir.Data,
                            Elixir.Data.Extra,
                            Elixir.Data.Moony,
                                Elixir.Data.Moony.Complex,
                                    Elixir.Data.Moony.Complex.A,
                                    Elixir.Data.Moony.Complex.B,
                                    Elixir.Data.Moony.Complex.C,
                                    Elixir.Data.Moony.Complex.D,
                                    Elixir.Data.Moony.Complex.E,
                                    Elixir.Data.Moony.Complex.F,
                                    Elixir.Data.Moony.Complex.G,
                                    Elixir.Data.Moony.Complex.H,
                                    Elixir.Data.Moony.Complex.I,
                                    Elixir.Data.Moony.Complex.J,
                                    Elixir.Data.Moony.Complex.K,
                                    Elixir.Data.Moony.Complex.L,
                                    Elixir.Data.Moony.Complex.M,
                                    Elixir.Data.Moony.Complex.N,
                                    Elixir.Data.Moony.Complex.O,
                                    Elixir.Data.Moony.Complex.P,
                                    Elixir.Data.Moony.Complex.Q,
                                Elixir.Data.Moony.Foreign,
                                    Elixir.Data.Moony.Foreign.A,
                                    Elixir.Data.Moony.Foreign.B,
                                    Elixir.Data.Moony.Foreign.C,
                                    Elixir.Data.Moony.Foreign.D,
                                    Elixir.Data.Moony.Foreign.E,
                                    Elixir.Data.Moony.Foreign.F,
                                    Elixir.Data.Moony.Foreign.G,
                                    Elixir.Data.Moony.Foreign.H,
                                    Elixir.Data.Moony.Foreign.I,
                                    Elixir.Data.Moony.Foreign.J,
                                    Elixir.Data.Moony.Foreign.K,
                                    Elixir.Data.Moony.Foreign.L,
                                    Elixir.Data.Moony.Foreign.M,
                                    Elixir.Data.Moony.Foreign.N,
                                    Elixir.Data.Moony.Foreign.O,
                                Elixir.Data.Moony.Regular,
                                    Elixir.Data.Moony.Regular.A,
                                    Elixir.Data.Moony.Regular.B,
                                    Elixir.Data.Moony.Regular.C,
                                    Elixir.Data.Moony.Regular.D,
                                    Elixir.Data.Moony.Regular.E,
                                    Elixir.Data.Moony.Regular.F,
                                    Elixir.Data.Moony.Regular.G,
                                    Elixir.Data.Moony.Regular.H,
                                    Elixir.Data.Moony.Regular.I,
                                    Elixir.Data.Moony.Regular.J,
                                    Elixir.Data.Moony.Regular.K,
                                    Elixir.Data.Moony.Regular.L,
                                    Elixir.Data.Moony.Regular.M,
                                    Elixir.Data.Moony.Regular.N,
                                    Elixir.Data.Moony.Regular.O,
                                    Elixir.Data.Moony.Regular.P,
                                    Elixir.Data.Moony.Regular.Q,
                                    Elixir.Data.Moony.Regular.R,
                                    Elixir.Data.Moony.Regular.S,
                                    Elixir.Data.Moony.Regular.T,
                                    Elixir.Data.Moony.Regular.U,
                                    Elixir.Data.Moony.Regular.V,
                                    Elixir.Data.Moony.Regular.W,
                            Elixir.Data.Sunny,
                                Elixir.Data.Sunny.Complex,
                                    Elixir.Data.Sunny.Complex.A,
                                    Elixir.Data.Sunny.Complex.B,
                                    Elixir.Data.Sunny.Complex.C,
                                    Elixir.Data.Sunny.Complex.D,
                                    Elixir.Data.Sunny.Complex.E,
                                    Elixir.Data.Sunny.Complex.F,
                                    Elixir.Data.Sunny.Complex.G,
                                    Elixir.Data.Sunny.Complex.H,
                                Elixir.Data.Sunny.Foreign,
                                    Elixir.Data.Sunny.Foreign.A,
                                    Elixir.Data.Sunny.Foreign.B,
                                    Elixir.Data.Sunny.Foreign.C,
                                    Elixir.Data.Sunny.Foreign.D,
                                    Elixir.Data.Sunny.Foreign.E,
                                    Elixir.Data.Sunny.Foreign.F,
                                Elixir.Data.Sunny.Regular,
                                    Elixir.Data.Sunny.Regular.A,
                                    Elixir.Data.Sunny.Regular.B,
                                    Elixir.Data.Sunny.Regular.C,
                                    Elixir.Data.Sunny.Regular.D,
                                    Elixir.Data.Sunny.Regular.E,
                                    Elixir.Data.Sunny.Regular.F,
                                    Elixir.Data.Sunny.Regular.G,
                                    Elixir.Data.Sunny.Regular.H,
                                    Elixir.Data.Sunny.Regular.I,
                                    Elixir.Data.Sunny.Regular.J,
                                    Elixir.Data.Sunny.Regular.K,
                                    Elixir.Data.Sunny.Regular.L,
                                    Elixir.Data.Sunny.Regular.M,
                                    Elixir.Data.Sunny.Regular.N,
                                    Elixir.Data.Sunny.Regular.O,
                                    Elixir.Data.Sunny.Regular.P,
                                    Elixir.Data.Sunny.Regular.Q,
                                    Elixir.Data.Sunny.Regular.R,
                        Elixir.Compose,
                        Elixir.Derive,
                        Elixir.Entity,
                        Elixir.Inflect,
                        Elixir.Lexicon,
                        Elixir.Lookup,
                        Elixir.Patterns,
                            Elixir.Patterns.Literal,
                            Elixir.Patterns.Triliteral,
                            Elixir.Patterns.Quadriliteral,
                        Elixir.Pretty,
                        Elixir.Resolve,
                        Elixir.System,
                        Elixir.Template,
                        Elixir.Version,
                    --  FM,
                        --  FM.Generic,
                            FM.Generic.General
extensions:         MultiParamTypeClasses,
                    FunctionalDependencies,
                    ExistentialQuantification,
                    --  PolymorphicComponents,
                    RankNTypes,
                    --  ScopedTypeVariables,
                    OverlappingInstances,
                    --  IncoherentInstances,
                    UndecidableInstances,
                    TypeSynonymInstances,
                    FlexibleInstances,
                    FlexibleContexts
hugs-options:       -98 +o +u -h96M
ghc-options:        +RTS -c -RTS
